org. tree page improvements.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
@@ -24,3 +24,4 @@ TreeTablePanel.menu.move=Move
 TreeTablePanel.message.nothingSelected=No object has been selected.
 TreeTablePanel.message.deleteObjectConfirm=Do you really want to delete selected {0} object(s)?
 TreeTablePanel.dialog.title.confirmDelete=Confirm delete
+TreeTablePanel.menu.actionOnSelection=Action on selection
