new menu for org. tree to expand/collapse all nodes, move roots. unfinished css styles

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
@@ -25,3 +25,6 @@ TreeTablePanel.message.nothingSelected=No object has been selected.
 TreeTablePanel.message.deleteObjectConfirm=Do you really want to delete selected {0} object(s)?
 TreeTablePanel.dialog.title.confirmDelete=Confirm delete
 TreeTablePanel.menu.actionOnSelection=Action on selection
+TreeTablePanel.collapseAll=Collapse all
+TreeTablePanel.expandAll=Expand all
+TreeTablePanel.moveRoot=Move root
