--- a/model/report-impl/pom.xml
+++ b/model/report-impl/pom.xml
@@ -53,6 +53,18 @@
 			<version>2.3-SNAPSHOT</version>
 		</dependency>
 
+ 		<!-- Jasper reports -->
+        <dependency>
+  			<groupId>net.sf.jasperreports</groupId>
+   			<artifactId>jasperreports</artifactId>
+   			<version>4.7.0-e1</version>
+ 		</dependency>
+  		<dependency>
+   			<groupId>org.hibernate</groupId>
+   			<artifactId>hibernate-core</artifactId>
+   			<scope>compile</scope>
+  		</dependency>
+  		
         <!-- Test -->
         <dependency>
             <groupId>com.evolveum.midpoint.repo</groupId>
