--- a/gui/admin-gui/pom.xml
+++ b/gui/admin-gui/pom.xml
@@ -177,7 +177,7 @@
         </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.model</groupId>
-            <artifactId>notifications</artifactId>
+            <artifactId>notifications-api</artifactId>
             <version>2.3-SNAPSHOT</version>
         </dependency>
         <!-- MIDPOINT RUNTIME DEPENDENCIES -->
