--- a/model/workflow-impl/pom.xml
+++ b/model/workflow-impl/pom.xml
@@ -100,7 +100,7 @@
         </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.model</groupId>
-            <artifactId>notifications</artifactId>
+            <artifactId>notifications-api</artifactId>
             <version>2.3-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
