Fixes for MID-1702 and MID-1683.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTasks.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTasks.properties
@@ -54,8 +54,11 @@ pageTasks.optionsTitle=Advanced options
 pageTasks.diagnostics=Diagnostics
 pageTasks.unknownRefName=Unknown object
 pageTasks.now=now
+pageTasks.nowForNotRunningTasks=(now)
 pageTasks.alreadyPassed=already passed
+pageTasks.alreadyPassedForNotRunningTasks=(already passed)
 pageTasks.in=in {0}
+pageTasks.inForNotRunningTasks=(in {0})
 mainForm.state.null=All
 mainForm.category.null=All
 TaskListType.ALL=All
