--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/server/PageTasks_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/server/PageTasks_sk_SK.utf8.properties
@@ -22,7 +22,6 @@ TaskListType.EXECUTING=Executing
 mainForm.category.null=All
 mainForm.state.null=All
 page.title=List tasks
-pageTasks.alreadyPassed=already passed
 pageTasks.button.deactivateServiceThreads=Stop all threads
 pageTasks.button.deleteNode=Delete
 pageTasks.button.deleteTask=Delete
@@ -39,6 +38,7 @@ pageTasks.button.synchronizeTasks=Synchronize tasks
 pageTasks.category=Category\:
 pageTasks.diagnostics=Diagnostics
 pageTasks.in=in {0}
+pageTasks.inForNotRunningTasks=(in {0})
 pageTasks.message.alreadyResumed=Task '{0}' can't be resumed, it's already running or closed.
 pageTasks.message.alreadySuspended=Task '{0}' is already suspended or closed.
 pageTasks.message.couldntCreateQuery=Couldn't create query for task list.
@@ -52,6 +52,9 @@ pageTasks.node.name=Name
 pageTasks.node.statusMessage=Status message
 pageTasks.nodes=Nodes
 pageTasks.now=now
+pageTasks.nowForNotRunningTasks=(now)
+pageTasks.alreadyPassed=already passed
+pageTasks.alreadyPassedForNotRunningTasks=(already passed)
 pageTasks.optionsTitle=Advanced options
 pageTasks.state=State\:
 pageTasks.subtasks=Show subtasks\:
