orgType multivalue editing for org. units.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -457,3 +457,4 @@ operation.com.evolveum.midpoint.web.page.admin.users.component.TreeTablePanel.de
 operation.com.evolveum.midpoint.web.page.admin.users.component.TreeTablePanel.deleteObject=Delete object (Gui)
 operation.com.evolveum.midpoint.web.util.WebModelUtils.loadObject=Load object (Gui)
 operation.com.evolveum.midpoint.web.util.WebModelUtils.deleteObject=Delete object (Gui)
+operation.com.evolveum.midpoint.web.page.admin.users.PageOrgUnit.saveOrgUnit=Save org. unit (Gui)
