--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/PageResourceEdit.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/PageResourceEdit.properties
@@ -18,3 +18,4 @@ page.title=New resource
 page.title.editResource=Edit resource
 pageResourceEdit.edit=Edit
 pageResourceEdit.message.emptyXml=Can't save empty xml as resource.
+pageResourceEdit.options=Options
