disabled menu items which are not implemented now, updated i18n.

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/server/PageTasks_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/server/PageTasks_en_US.utf8.properties
@@ -58,7 +58,7 @@ pageTasks.alreadyPassed=already passed
 pageTasks.alreadyPassedForNotRunningTasks=(already passed)
 pageTasks.optionsTitle=Advanced options
 pageTasks.state=State
-pageTasks.subtasks=Show subtasks\:
+pageTasks.subtasks=Show subtasks
 pageTasks.task.category=Category
 pageTasks.task.currentRunTime=Current run time
 pageTasks.task.detail=Detail
