--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -43,6 +43,7 @@ ObjectTypeGuiDescriptor.user=User
 ObjectTypeGuiDescriptor.org=Organization
 ObjectTypeGuiDescriptor.shadow=Shadow
 ObjectTypeGuiDescriptor.focus=Focus
+ObjectTypeGuiDescriptor.report=Report
 
 SynchronizationPolicyDecision.ADD=Add
 SynchronizationPolicyDecision.DELETE=Delete
