updated localization property files for en_US and sk_SK locale (not translated yet).

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/PageResources_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/PageResources_en_US.utf8.properties
@@ -1,10 +1,8 @@
-#Sat Oct 12 17:23:53 CEST 2013
+#Mon Dec 09 19:46:43 CET 2013
 page.subTitle=connected to midPoint
 page.title=Resources
 pageResources.bundle=Bundle
 pageResources.button.discoveryRemote=Discovery
-pageResources.button.label.connector=Connector Host
-pageResources.button.label.resource=Resource
 pageResources.connector.hostname=Hostname
 pageResources.connector.name=Name
 pageResources.connector.port=Port
@@ -24,5 +22,4 @@ pageResources.name=Name
 pageResources.progress=Progress
 pageResources.resources=Resources
 pageResources.status=Last status
-pageResources.sync=Sync
 pageResources.version=Version
