--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/PageBase_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/PageBase_sk_SK.utf8.properties
@@ -1,11 +1,12 @@
-#Fri Jun 07 12:44:19 CEST 2013
+#Mon Dec 09 19:46:55 CET 2013
 PageBase.button.back=Back
+PageBase.button.cancel=Cancel
 PageBase.button.delete=Delete
 PageBase.button.run=Run
 PageBase.button.save=Save
+PageBase.clearCssCache=Clear less/js cache
 WorkItemsPanel.assigned=Assigned to
 WorkItemsPanel.created=Created
 WorkItemsPanel.name=Name
 pageBase.midPointVersion=Verzia\: ${pom.version}, popis\: ${describe}
-pageBase.rightsReserved=&copy;2013 Evolveum. Všetky práva vyhradené.
 pageBase.unknownBuildNumber=neznáme
