--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/PageAdmin_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/PageAdmin_sk_SK.utf8.properties
@@ -1,4 +1,42 @@
-#Thu May 30 10:05:25 CEST 2013
+#Mon Dec 09 19:46:55 CET 2013
+PageAdmin.menu.top.configuration=Configuration
+PageAdmin.menu.top.configuration.about=About
+PageAdmin.menu.top.configuration.basic=Basic
+PageAdmin.menu.top.configuration.bulkActions=Bulk actions
+PageAdmin.menu.top.configuration.configuration=Configuration
+PageAdmin.menu.top.configuration.development=Development
+PageAdmin.menu.top.configuration.expressionEvaluator=Expression evaluator
+PageAdmin.menu.top.configuration.importObject=Import object
+PageAdmin.menu.top.configuration.logging=Logging
+PageAdmin.menu.top.configuration.repositoryObjects=Repository objects
+PageAdmin.menu.top.configuration.security=Security
+PageAdmin.menu.top.configuration.shadowsDetails=Shadows details
+PageAdmin.menu.top.configuration.timeTest=Time test
+PageAdmin.menu.top.home=Home
+PageAdmin.menu.top.reports=Reports
+PageAdmin.menu.top.reports.created=Created reports
+PageAdmin.menu.top.reports.list=List reports
+PageAdmin.menu.top.resources=Resources
+PageAdmin.menu.top.resources.list=List resources
+PageAdmin.menu.top.resources.new=New Resource
+PageAdmin.menu.top.roles=Roles
+PageAdmin.menu.top.roles.list=List roles
+PageAdmin.menu.top.roles.new=New role
+PageAdmin.menu.top.serverTasks=Server tasks
+PageAdmin.menu.top.serverTasks.list=List tasks
+PageAdmin.menu.top.serverTasks.new=New task
+PageAdmin.menu.top.users=Users
+PageAdmin.menu.top.users.find=Find users
+PageAdmin.menu.top.users.list=List users
+PageAdmin.menu.top.users.new=New user
+PageAdmin.menu.top.users.org=Org. structure
+PageAdmin.menu.top.users.org.new=New organization
+PageAdmin.menu.top.users.org.tree=Organization tree
+PageAdmin.menu.top.workItems=Work items
+PageAdmin.menu.top.workItems.list=My work items
+PageAdmin.menu.top.workItems.listProcessInstancesAll=All requests
+PageAdmin.menu.top.workItems.listProcessInstancesRequestedBy=My requests
+PageAdmin.menu.top.workItems.listProcessInstancesRequestedFor=Requests about me
 pageAdmin.configuration=Konfigurácia
 pageAdmin.configuration.description=Zabezpečenie, logovanie, import
 pageAdmin.home=Domov
@@ -36,4 +74,5 @@ pageTasks.category.Reconciliation=Reconciliation
 pageTasks.category.System=System
 pageTasks.category.UserRecomputation=User recomputation
 pageTasks.category.Workflow=Workflow
+pageTasks.category.null=(undefined)
 pageTasks.runsContinually=runs continually
