--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageLogging_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageLogging_sk_SK.utf8.properties
@@ -1,4 +1,4 @@
-#Thu May 30 10:05:25 CEST 2013
+#Mon Dec 09 19:46:55 CET 2013
 ProfilingLevel.ARGUMENTS=Argumenty
 ProfilingLevel.ENTRY_EXIT=Vstup/Výstup
 ProfilingLevel.OFF=Vypnutý
@@ -32,44 +32,45 @@ pageLogging.button.deleteLogger=Delete logger
 pageLogging.button.reset=Reset
 pageLogging.button.save=Save
 pageLogging.details=Details\:
+pageLogging.dumpInterval=Interval vypisovania do logov\:
 pageLogging.filter=Filter
 pageLogging.filter.ALL=Všetko
 pageLogging.filter.GUI=Web
 pageLogging.filter.MODEL=Model
+pageLogging.filter.NOTIFICATIONS=Notification filter
 pageLogging.filter.PROVISIONING=Provisioning
 pageLogging.filter.REPOSITORY=Repository
 pageLogging.filter.RESOURCEOBJECTCHANGELISTENER=Resource object change listener
 pageLogging.filter.TASKMANAGER=Task manager
+pageLogging.filter.WORKFLOWS=Workflow filter
 pageLogging.filtersTable=Filters table
 pageLogging.logSubsystemEntryExit=Log subsystem entry/exit
 pageLogging.logger=Logger
 pageLogging.logger.ALL=Všetko
 pageLogging.logger.GUI=Web
 pageLogging.logger.MODEL=Model
+pageLogging.logger.NOTIFICATIONS=Notifications logger
 pageLogging.logger.PROVISIONING=Provisioning
 pageLogging.logger.REPOSITORY=Repository
 pageLogging.logger.RESOURCEOBJECTCHANGELISTENER=Resource object change listener
 pageLogging.logger.TASKMANAGER=Task manager
 pageLogging.logger.WORKFLOWS=Workflow module logger
-pageLogging.logger.NOTIFICATIONS=Notifications logger
 pageLogging.loggers=Loggers
 pageLogging.loggersAppender=Appender
 pageLogging.loggersLevel=Level
 pageLogging.loggersTable=Loggers table
+pageLogging.performanceStatistics=Štatistiky výkonnosti systému\:
+pageLogging.profiling=Profilovanie
+pageLogging.requestFilter=Filter webových requestov\:
 pageLogging.rootAppender=Root appender\:
 pageLogging.rootLevel=Root logger\:
+pageLogging.subsystem..taskManager=Manažér úloh
 pageLogging.subsystem.appender=Appender
 pageLogging.subsystem.level=Level
-
-pageLogging.profiling=Profilovanie
-pageLogging.requestFilter=Filter webových requestov:
-pageLogging.performanceStatistics=Štatistiky výkonnosti systému:
-pageLogging.subsystems=Podsystémy:
-pageLogging.dumpInterval=Interval vypisovania do logov:
 pageLogging.subsystem.model=Model
-pageLogging.subsystem.repository=Repozitár
 pageLogging.subsystem.provisioning=Provisioning
-pageLogging.subsystem.ucf=Ucf
+pageLogging.subsystem.repository=Repozitár
 pageLogging.subsystem.resourceObjectChangeListener=Monitor zmien v pripojených systémoch
-pageLogging.subsystem..taskManager=Manažér úloh
+pageLogging.subsystem.ucf=Ucf
 pageLogging.subsystem.workflow=Pracovné položky
+pageLogging.subsystems=Podsystémy\:
