--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageSystemConfiguration_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageSystemConfiguration_sk_SK.utf8.properties
@@ -1,21 +1,15 @@
-#
-# Copyright (c) 2010-2013 Evolveum
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-
-#Sat Mar 16 14:26:07 CET 2013
+#Mon Dec 09 19:46:55 CET 2013
+AEPlevel.FULL=Full
+AEPlevel.LEGALIZE=Relative
+AEPlevel.MARK=Mark
+AEPlevel.NONE=None
+AEPlevel.POSITIVE=Positive
+page.subTitle=for midPoint
 page.title=Configuration
+pageSystemConfiguration.assignmentPolicyEnforcement.value.full=Full
+pageSystemConfiguration.assignmentPolicyEnforcement.value.legalize=Legalize
+pageSystemConfiguration.assignmentPolicyEnforcement.value.mark=Mark
+pageSystemConfiguration.assignmentPolicyEnforcement.value.none=None
+pageSystemConfiguration.assignmentPolicyEnforcement.value.positive=Positive
 pageSystemConfiguration.logging.title=Logging
 pageSystemConfiguration.system.title=System
-pageSystemConfiguration.user.title=Personalization
