--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/home/component/PersonalInfoPanel_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/home/component/PersonalInfoPanel_sk_SK.utf8.properties
@@ -1,8 +1,11 @@
-#Thu May 30 10:05:25 CEST 2013
-PersonalInfoPanel.lastFailDate=Last unsuccessful login date
-PersonalInfoPanel.lastFailFrom=Last unsuccessful login from
-PersonalInfoPanel.lastLoginDate=Last login date
-PersonalInfoPanel.lastLoginFrom=Last login from
+#Mon Dec 09 19:46:55 CET 2013
+PersonalInfoPanel.lastFail=Last unsuccessful login
+PersonalInfoPanel.lastFail.date=Date
+PersonalInfoPanel.lastFail.from=From
+PersonalInfoPanel.lastLogin=Last login
+PersonalInfoPanel.lastLogin.date=Date
+PersonalInfoPanel.lastLogin.from=From
 PersonalInfoPanel.never=Never
+PersonalInfoPanel.other=Other
 PersonalInfoPanel.passwordExp=Account expiration date
 PersonalInfoPanel.undefined=Undefined
