--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/PageResources_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/PageResources_sk_SK.utf8.properties
@@ -1,15 +1,14 @@
-#Fri Jun 07 12:44:19 CEST 2013
+#Mon Dec 09 19:46:55 CET 2013
+page.subTitle=connected to midPoint
 page.title=Zoznam koncových systémov
 pageResources.bundle=Balík
 pageResources.button.discoveryRemote=Discovery
-pageResources.button.label.connector=Connector
-pageResources.button.label.resource=Systém
 pageResources.connector.hostname=Hostname
 pageResources.connector.name=Meno
 pageResources.connector.port=Port
 pageResources.connector.protectConnection=Chránený
 pageResources.connector.timeout=Timeout
-pageResources.connector.title=Konektor hosty
+pageResources.connectorHosts=Connector hosts
 pageResources.content=Content
 pageResources.dialog.title.confirmDelete=Potvrdenie zmazania
 pageResources.import=Import
@@ -21,6 +20,6 @@ pageResources.message.noHostSelected=No connector host has been selected.
 pageResources.message.noResourceSelected=No resource has been selected.
 pageResources.name=Meno
 pageResources.progress=Aktuálny status
+pageResources.resources=Resources
 pageResources.status=Stav
-pageResources.sync=Sync
 pageResources.version=Verzia
