--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts_sk_SK.utf8.properties
@@ -1,13 +1,14 @@
-#Thu May 30 10:05:25 CEST 2013
+#Mon Dec 09 19:46:55 CET 2013
+page.subTitle=on {0}
 page.title={0}
 pageContentAccounts.accounts=Accounts
 pageContentAccounts.button.changeOwner=Change owner
-pageContentAccounts.button.importAccount=Import úètu
 pageContentAccounts.button.clearButton=Clear
+pageContentAccounts.button.importAccount=Import ï¿½ï¿½tu
 pageContentAccounts.button.removeOwner=Remove owner
 pageContentAccounts.button.searchButton=Search
 pageContentAccounts.identifiers=Identifiers
-pageContentAccounts.message.cantImportAccount=Nepodarilo sa importova úèet s oid={0}
+pageContentAccounts.message.cantImportAccount=Nepodarilo sa importovaï¿½ ï¿½ï¿½et s oid\={0}
 pageContentAccounts.message.cantShowAccountDetails=Can't show details for account {0} ({1}).
 pageContentAccounts.message.cantShowUserDetails=Can't show details of user {0} ({1}).
 pageContentAccounts.message.noAccountSelected=No accounts has been selected.
