--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/roles/PageRole_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/roles/PageRole_sk_SK.utf8.properties
@@ -1,7 +1,9 @@
-#Thu May 30 10:05:25 CEST 2013
+#Mon Dec 09 19:46:55 CET 2013
+page.subTitle=something clever
 page.title=Nová rola
 pageRole.button.back=Späť
 pageRole.button.save=Uložiť
 pageRole.edit=Upraviť
 pageRole.message.emptyXml=Nie je možné uložiť prázne xml ako rolu.
+pageRole.options=Options
 pageRole.title.editing=Detaily role '{0}'
