--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/server/PageTasks_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/server/PageTasks_sk_SK.utf8.properties
@@ -1,27 +1,14 @@
-#
-# Copyright (c) 2010-2013 Evolveum
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-
-#Tue Apr 30 12:43:33 CEST 2013
+#Mon Dec 09 19:46:55 CET 2013
 TaskListType.ACTIVATED=Activated
 TaskListType.ALL=All
 TaskListType.DEACTIVATED=Deactivated
 TaskListType.EXECUTING=Executing
 mainForm.category.null=All
 mainForm.state.null=All
+page.subTitle=in midPoint
 page.title=List tasks
+pageTasks.alreadyPassed=already passed
+pageTasks.alreadyPassedForNotRunningTasks=(already passed)
 pageTasks.button.deactivateServiceThreads=Stop all threads
 pageTasks.button.deleteNode=Delete
 pageTasks.button.deleteTask=Delete
@@ -53,9 +40,8 @@ pageTasks.node.statusMessage=Status message
 pageTasks.nodes=Nodes
 pageTasks.now=now
 pageTasks.nowForNotRunningTasks=(now)
-pageTasks.alreadyPassed=already passed
-pageTasks.alreadyPassedForNotRunningTasks=(already passed)
 pageTasks.optionsTitle=Advanced options
+pageTasks.stalledSince=STALLED since {0} at {1}
 pageTasks.state=State\:
 pageTasks.subtasks=Show subtasks\:
 pageTasks.task.category=Category
@@ -65,6 +51,8 @@ pageTasks.task.executingAt=Executing at
 pageTasks.task.execution=Execution
 pageTasks.task.name=Name
 pageTasks.task.objectRef=Object reference
+pageTasks.task.progress=Progress
 pageTasks.task.scheduledToRunAgain=Scheduled to start again
 pageTasks.task.status=Status
+pageTasks.tasks=Tasks
 pageTasks.unknownRefName=Unknown object
