--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUsers_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUsers_sk_SK.utf8.properties
@@ -1,21 +1,24 @@
-#Tue Jul 16 11:28:20 CEST 2013
+#Mon Dec 09 19:46:55 CET 2013
+SearchType.FAMILY_NAME=Family name
+SearchType.FULL_NAME=Full name
+SearchType.GIVEN_NAME=Given name
+SearchType.NAME=Name
+page.subTitle=in midPoint
 page.title=Používatelia v databáze
 pageUsers.accounts=Accounts
-pageUsers.button.clearButton=Vymazať
-pageUsers.button.delete=Vymazať
-pageUsers.button.disable=Zakázať
-pageUsers.button.enable=Povoliť
-pageUsers.button.reconcile=Reconcile
 pageUsers.button.searchButton=Hľadať
 pageUsers.dialog.title.confirmDelete=Potvrdenie zmazania
 pageUsers.email=Email
 pageUsers.familyName=Priezvisko
 pageUsers.fullName=Celé meno
 pageUsers.givenName=Krstné meno
+pageUsers.menu.delete=Delete
+pageUsers.menu.disable=Disable
+pageUsers.menu.enable=Enable
+pageUsers.menu.reconcile=Reconcile
 pageUsers.message.deleteUserConfirm=Naozaj chcete vymazať {0} vybraných používateľ/ov?
 pageUsers.message.nothingSelected=Nebol vybraný žiaden používateľ.
 pageUsers.message.queryError=Nastala chyba pri preklade dopytu pre vyhľadávanie.
 pageUsers.name=Meno
-pageUsers.optionsTitle=Možnosti
 pageUsers.search=Hľadať text
-pageUsers.type=Typ
+pageUsers.searchTextPlaceholder=Text
