--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/PageResourceEdit_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/PageResourceEdit_en_US.utf8.properties
@@ -1,5 +1,6 @@
-#Sat Oct 12 17:23:53 CEST 2013
+#Mon Dec 09 19:46:43 CET 2013
 page.title=New resource
 page.title.editResource=Edit resource
 pageResourceEdit.edit=Edit
 pageResourceEdit.message.emptyXml=Can't save empty xml as resource.
+pageResourceEdit.options=Options
