--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_en_US.utf8.properties
@@ -1,4 +1,4 @@
-#Sat Oct 12 17:23:53 CEST 2013
+#Mon Dec 09 19:46:43 CET 2013
 ActivationStatusType.ARCHIVED=Archived
 ActivationStatusType.DISABLED=Disabled
 ActivationStatusType.ENABLED=Enabled
@@ -30,6 +30,7 @@ Boolean.FALSE=False
 Boolean.NULL=Undefined
 Boolean.TRUE=True
 DateValidator.message.fromAfterTo=Valid from date must be before valid to date.
+FocusType.activation=Activation
 HoursValidator.range=Field '${label}' have to be between ${minimum} and ${maximum}.
 LoggingLevelType.ALL=All
 LoggingLevelType.DEBUG=Debug
@@ -49,7 +50,27 @@ NodeExecutionStatus.DOWN=Turned off
 NodeExecutionStatus.ERROR=Error
 NodeExecutionStatus.PAUSED=Stopped
 NodeExecutionStatus.RUNNING=Running
+ObjectType.description=Description
 ObjectType.name=Name
+ObjectType.parentOrgRef=Parent org. units
+ObjectTypeGuiDescriptor.abstractRole=Abstract role
+ObjectTypeGuiDescriptor.account=Account
+ObjectTypeGuiDescriptor.connector=Connector
+ObjectTypeGuiDescriptor.connectorHost=Connector host
+ObjectTypeGuiDescriptor.focus=Focus
+ObjectTypeGuiDescriptor.genericObject=Generic object
+ObjectTypeGuiDescriptor.node=Node
+ObjectTypeGuiDescriptor.object=Object
+ObjectTypeGuiDescriptor.objectTemplate=Object template
+ObjectTypeGuiDescriptor.org=Organization
+ObjectTypeGuiDescriptor.report=Report
+ObjectTypeGuiDescriptor.resource=Resource
+ObjectTypeGuiDescriptor.role=Role
+ObjectTypeGuiDescriptor.shadow=Shadow
+ObjectTypeGuiDescriptor.systemConfiguration=System configuration
+ObjectTypeGuiDescriptor.task=Task
+ObjectTypeGuiDescriptor.user=User
+ObjectTypeGuiDescriptor.valuePolicy=Value policy
 OperationResultStatus.FATAL_ERROR=Fatal error
 OperationResultStatus.IN_PROGRESS=In progress
 OperationResultStatus.NOT_APPLICABLE=Not applicable
@@ -57,6 +78,12 @@ OperationResultStatus.PARTIAL_ERROR=Partial error
 OperationResultStatus.SUCCESS=Success
 OperationResultStatus.UNKNOWN=Unknown
 OperationResultStatus.WARNING=Warning
+OrgType.costCenter=Cost center
+OrgType.displayName=Display name
+OrgType.identifier=Identifier
+OrgType.locality=Locality
+OrgType.orgType=Org. type
+OrgType.requestable=Requestable
 OriginType.ACTIVATIONS=Activations
 OriginType.ASSIGNMENTS=Assignments
 OriginType.CREDENTIALS=Credentials
@@ -105,8 +132,8 @@ ThreadStopActionType.RESCHEDULE=Reschedule
 ThreadStopActionType.RESTART=Restart
 ThreadStopActionType.SUSPEND=Suspend
 WebModelUtils.couldntLoadObject=Couldn't load object.
-com.evolveum.midpoint.notifications.transports.MailTransport.send=Send mail (Notifications)
-com.evolveum.midpoint.notifications.transports.SimpleSmsTransport.send=Send SMS (Notifications)
+com.evolveum.midpoint.notifications.api.transports.MailTransport.send=Send mail (Notifications)
+com.evolveum.midpoint.notifications.api.transports.SimpleSmsTransport.send=Send SMS (Notifications)
 lower.ActivationStatusType.ARCHIVED=archived
 lower.ActivationStatusType.DISABLED=disabled
 lower.ActivationStatusType.ENABLED=enabled
@@ -265,9 +292,7 @@ operation.com.evolveum.midpoint.web.page.admin.configuration.PageLogging.updateL
 operation.com.evolveum.midpoint.web.page.admin.configuration.PageTimeTest.changeTime=Change time (Gui)
 operation.com.evolveum.midpoint.web.page.admin.help.PageSystem.getRepoDiag=Get repository diagnostics (Gui)
 operation.com.evolveum.midpoint.web.page.admin.help.PageSystem.testRepository=Test repository (Gui)
-operation.com.evolveum.midpoint.web.page.admin.home.PageDashboard.loadAccount=Load account (Gui)
 operation.com.evolveum.midpoint.web.page.admin.home.PageDashboard.loadAccounts=Load accounts (Gui)
-operation.com.evolveum.midpoint.web.page.admin.home.PageDashboard.loadAssignment=Load assignment (Gui)
 operation.com.evolveum.midpoint.web.page.admin.home.PageDashboard.loadAssignments=Load assignments (Gui)
 operation.com.evolveum.midpoint.web.page.admin.home.PageDashboard.loadUser=Load user (Gui)
 operation.com.evolveum.midpoint.web.page.admin.home.PageDashboard.loadWorkItems=Load work items (Gui)
@@ -307,6 +332,7 @@ operation.com.evolveum.midpoint.web.page.admin.server.dto.NodeDtoProvider.countN
 operation.com.evolveum.midpoint.web.page.admin.server.dto.NodeDtoProvider.listNodes=List nodes (Gui)
 operation.com.evolveum.midpoint.web.page.admin.server.dto.TaskDtoProvider.countTasks=Count tasks (Gui)
 operation.com.evolveum.midpoint.web.page.admin.server.dto.TaskDtoProvider.listTasks=List tasks (Gui)
+operation.com.evolveum.midpoint.web.page.admin.users.PageOrgUnit.saveOrgUnit=Save org. unit (Gui)
 operation.com.evolveum.midpoint.web.page.admin.users.PageUser.loadAccount=Load account (Gui)
 operation.com.evolveum.midpoint.web.page.admin.users.PageUser.loadAccounts=Load accounts (Gui)
 operation.com.evolveum.midpoint.web.page.admin.users.PageUser.loadAssignment=Load assignment (Gui)
@@ -324,7 +350,13 @@ operation.com.evolveum.midpoint.web.page.admin.users.PageUsers.enableUser=Enable
 operation.com.evolveum.midpoint.web.page.admin.users.PageUsers.enableUsers=Enable users (Gui)
 operation.com.evolveum.midpoint.web.page.admin.users.PageUsers.reconcileUser=Reconcile user (Gui)\: {0}
 operation.com.evolveum.midpoint.web.page.admin.users.PageUsers.reconcileUsers=Reconcile users (Gui)
+operation.com.evolveum.midpoint.web.page.admin.users.component.TreeTablePanel.deleteObject=Delete object (Gui)
+operation.com.evolveum.midpoint.web.page.admin.users.component.TreeTablePanel.deleteObjects=Delete objects (Gui)
+operation.com.evolveum.midpoint.web.page.admin.users.component.TreeTablePanel.moveObject=Move object (Gui)
+operation.com.evolveum.midpoint.web.page.admin.users.component.TreeTablePanel.moveObjects=Move objects (Gui)
 operation.com.evolveum.midpoint.web.page.admin.workflow.PageWorkItem.saveWorkItem=Save work item (Gui)
+operation.com.evolveum.midpoint.web.util.WebModelUtils.deleteObject=Delete object (Gui)
+operation.com.evolveum.midpoint.web.util.WebModelUtils.loadObject=Load object (Gui)
 operation.com.evolveum.midpoint.wf.WfHook.invoke=Workflow hook invocation (Workflow)
 operation.com.evolveum.midpoint.xml.ns._public.model.model_1_wsdl.ModelPortType.addObject=Model web service add object
 operation.com.evolveum.midpoint.xml.ns._public.model.model_1_wsdl.ModelPortType.deleteObject=Model web service delete object
@@ -344,23 +376,6 @@ operation.org.identityconnectors.framework.api.ConnectorFacade.delete=Delete obj
 operation.org.identityconnectors.framework.api.ConnectorFacade.getObject=ICF get object
 operation.org.identityconnectors.framework.api.ConnectorFacade.schema=ICF schema
 operation.org.identityconnectors.framework.api.ConnectorFacade.update=Update (Icf)
-schema.objectTypes.abstractRole=Abstract role
-schema.objectTypes.account=Account
-schema.objectTypes.connector=Connector
-schema.objectTypes.connectorHost=Connector host
-schema.objectTypes.focus=Focus
-schema.objectTypes.genericObject=Generic object
-schema.objectTypes.node=Node
-schema.objectTypes.object=Object
-schema.objectTypes.objectTemplate=Object template
-schema.objectTypes.org=Organization
-schema.objectTypes.resource=Resource
-schema.objectTypes.role=Role
-schema.objectTypes.shadow=Shadow
-schema.objectTypes.systemConfiguration=System configuration
-schema.objectTypes.task=Task
-schema.objectTypes.user=User
-schema.objectTypes.valuePolicy=Value policy
 web.security.provider.access.denied=Access denied. You don't have permission to access, please contact midPoint's administrators.
 web.security.provider.denied=Permission denied.
 web.security.provider.disabled=User is disabled.
