--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/component/prism/PrismObjectPanel_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/component/prism/PrismObjectPanel_sk_SK.utf8.properties
@@ -1,2 +1,6 @@
-#Thu May 30 10:05:25 CEST 2013
+#Mon Dec 09 19:46:55 CET 2013
+PrismObjectPanel.hideEmpty=Hide empty fields
+PrismObjectPanel.maximize=Maximize
+PrismObjectPanel.minimize=Minimize
 PrismObjectPanel.protectedAccount=Protected account
+PrismObjectPanel.showEmpty=Show empty fields
