--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/component/wf/processes/itemApproval/ItemApprovalPanel_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/component/wf/processes/itemApproval/ItemApprovalPanel_sk_SK.utf8.properties
@@ -1,8 +1,9 @@
-#Thu May 30 10:05:25 CEST 2013
+#Mon Dec 09 19:46:55 CET 2013
 ItemApprovalPanel.approvalSchema=Approval schema
 ItemApprovalPanel.currentWorkItems=Current work items
 ItemApprovalPanel.decisionsDoneWhenFinishedIs_false=Decisions done so far
 ItemApprovalPanel.decisionsDoneWhenFinishedIs_true=Decisions done
 ItemApprovalPanel.itemThatWasApproved=Item that was considered (and was APPROVED)
+ItemApprovalPanel.itemThatWasCompleted=Item that was completed
 ItemApprovalPanel.itemThatWasRejected=Item that was considered (and was REJECTED)
 ItemApprovalPanel.itemToBeApproved=Item to be approved
