--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/component/wizard/resource/NameStep_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/component/wizard/resource/NameStep_sk_SK.utf8.properties
@@ -1,13 +1,15 @@
-#Thu May 30 10:05:25 CEST 2013
+#Mon Dec 09 19:46:55 CET 2013
 NameStep.connectorBundle=Bundle
+NameStep.connectorHost=Connector host
 NameStep.connectorInformation=Information
 NameStep.connectorName=Connector name
 NameStep.connectorNotSelected=Connector was not selected.
 NameStep.connectorType=Type
 NameStep.connectorVersion=Connector version
+NameStep.description=Description
 NameStep.hostNotUsed=Not used
-NameStep.location=Location
 NameStep.name=Resource name
 NameStep.undefinedName=Undefined name
 NameStep.undefinedVersion=Undefined version
 NameStep.unknownVersion=Unknown
+WizardStep.title=Resource basics
