--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageDebugView_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageDebugView_sk_SK.utf8.properties
@@ -1,20 +1,5 @@
-#
-# Copyright (c) 2010-2013 Evolveum
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-
-#Fri May 03 16:27:45 CEST 2013
+#Mon Dec 09 19:46:55 CET 2013
+page.subTitle=for '{0}'
 page.title=Zobrazenie objektu
 pageDebugView.button.back=Späť
 pageDebugView.button.save=Uložiť
@@ -22,6 +7,5 @@ pageDebugView.edit=Editovať
 pageDebugView.encrypt=Protected by encryption
 pageDebugView.message.cantSaveEmpty=Nie je možné uložit prázdne xml.
 pageDebugView.message.oidNotDefined=OID objektu nie je definované.
-pageDebugView.name=Meno\:
-pageDebugView.oid=Oid\:
+pageDebugView.options=Options
 pageDebugView.validateSchema=Validate schema
