--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel_sk_SK.utf8.properties
@@ -1,4 +1,4 @@
-#Thu May 30 10:05:25 CEST 2013
+#Mon Dec 09 19:46:55 CET 2013
 LoggingConfigPanel.appender=Appender\:
 LoggingConfigPanel.appenders=Appenders
 LoggingConfigPanel.appenders.appending=Appending
@@ -14,24 +14,11 @@ LoggingConfigPanel.button.addClassLogger=Add logger
 LoggingConfigPanel.button.addComponentLogger=Add component logger
 LoggingConfigPanel.button.addConsoleAppender=Add console appender
 LoggingConfigPanel.button.addFileAppender=Add file appender
-LoggingConfigPanel.button.addFilter=Add filter
-LoggingConfigPanel.button.advanced=Advanced
 LoggingConfigPanel.button.deleteAppender=Delete appender
-LoggingConfigPanel.button.deleteFilter=Delete filter
 LoggingConfigPanel.button.deleteLogger=Delete logger
 LoggingConfigPanel.button.reset=Reset
 LoggingConfigPanel.button.save=Save
 LoggingConfigPanel.details=Details\:
-LoggingConfigPanel.filter=Filter
-LoggingConfigPanel.filter.ALL=All
-LoggingConfigPanel.filter.GUI=Web filter
-LoggingConfigPanel.filter.MODEL=Model filter
-LoggingConfigPanel.filter.PROVISIONING=Provisioning filter
-LoggingConfigPanel.filter.REPOSITORY=Repository filter
-LoggingConfigPanel.filter.RESOURCEOBJECTCHANGELISTENER=Resource object change listener filter
-LoggingConfigPanel.filter.TASKMANAGER=Task manager filter
-LoggingConfigPanel.filtersTable=Filters table
-LoggingConfigPanel.logSubsystemEntryExit=Log subsystem entry/exit
 LoggingConfigPanel.logger=Logger
 LoggingConfigPanel.logger.ALL=All
 LoggingConfigPanel.logger.GUI=Web logger
@@ -43,16 +30,27 @@ LoggingConfigPanel.logger.TASKMANAGER=Task manager logger
 LoggingConfigPanel.loggers=Loggers
 LoggingConfigPanel.loggersAppender=Appender
 LoggingConfigPanel.loggersLevel=Level
-LoggingConfigPanel.loggersTable=Loggers table
+LoggingConfigPanel.profiling.dumpInterval=Dump interval\:
+LoggingConfigPanel.profiling.dumpInterval.placeholder=Dump interval
+LoggingConfigPanel.profiling.entryExit=Profiling - entry/exit
+LoggingConfigPanel.profiling.general=Profiling - General
+LoggingConfigPanel.profiling.performanceStatistics=Performance Statistics\:
+LoggingConfigPanel.profiling.requestFilter=Request Filter\:
+LoggingConfigPanel.profiling.subsystem.model=Model
+LoggingConfigPanel.profiling.subsystem.provisioning=Provisioning
+LoggingConfigPanel.profiling.subsystem.repository=Repository
+LoggingConfigPanel.profiling.subsystem.resourceObjectChangeListener=Resource Object Change Listener
+LoggingConfigPanel.profiling.subsystem.taskManager=Task Manager
+LoggingConfigPanel.profiling.subsystem.ucf=Ucf
+LoggingConfigPanel.profiling.subsystem.workflow=Workflow
+LoggingConfigPanel.profiling.subsystems=Profiling - Subsystems
 LoggingConfigPanel.rootAppender=Root appender\:
-LoggingConfigPanel.rootLevel=Root logger\:
+LoggingConfigPanel.rootLogger=Root logger
 LoggingConfigPanel.subsystem.appender=Appender
 LoggingConfigPanel.subsystem.level=Level
 ProfilingLevel.ARGUMENTS=Arguments
 ProfilingLevel.ENTRY_EXIT=Entry/Exit
 ProfilingLevel.OFF=Off
-filter.duplicate=Filter with name '{0}' is already defined
-filter.emptyFilter=Filter must not be empty
 logger.duplicate=Logger with name '{0}' is already defined
 logger.emptyLogger=Logger must not be empty
 message.emptyLevel=Level must not be empty
