--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUser_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUser_sk_SK.utf8.properties
@@ -1,20 +1,5 @@
-#
-# Copyright (c) 2010-2013 Evolveum
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-
-#Tue Apr 30 12:43:33 CEST 2013
+#Mon Dec 09 19:46:55 CET 2013
+page.subTitle=details
 page.title=Detaily používateľa
 pageUser.accounts=Účty
 pageUser.assignment.active=Aktívny
@@ -22,23 +7,19 @@ pageUser.assignment.name=Meno
 pageUser.assignment.type=Typ
 pageUser.assignments=Priradenia
 pageUser.button.addAccount=Account
-pageUser.button.assignAccount=Account
-pageUser.button.assignOrgUnit=Org. unit
-pageUser.button.assignRole=Role
 pageUser.button.back=Späť
 pageUser.button.delete=Zmazať
 pageUser.button.disable=Zakázať
 pageUser.button.enable=Povoliť
-pageUser.button.label.add=Add
-pageUser.button.label.assign=Assign
-pageUser.button.label.resources=Koncový systém
-pageUser.button.label.role=Rola
 pageUser.button.save=Uložiť
 pageUser.button.submit=Preview changes
-pageUser.button.unassign=Unassign
 pageUser.button.unlink=Odlinkovať
 pageUser.button.unlock=Unlock
 pageUser.description=Používateľ v databáze
+pageUser.menu.assignAccount=Assign account
+pageUser.menu.assignOrg=Assign org. unit
+pageUser.menu.assignRole=Assign role
+pageUser.menu.unassign=Unassign
 pageUser.message.cantCreateUser=Couldn't create or modify user
 pageUser.message.cantEditUser=Nepodarilo sa načítať formulár pre editáciu používateľa.
 pageUser.message.cantNewUser=Nepodarilo sa načítať formulár pre nového používateľa.
@@ -59,7 +40,6 @@ pageUser.message.noEnabledPropertyFound=Nebola nájdená vlastnosť na povolenie
 pageUser.message.noPassword=Password is not entered.
 pageUser.message.noResourceSelected=Nebol vybratý koncový systém.
 pageUser.message.unsupportedState=Nepodporovaný stav formulára spoužívateľom '{0}'.
-pageUser.orgUnits=Organization units [{0}]
 pageUser.task.category=Category
 pageUser.task.execution=Execution state
 pageUser.task.name=Task name
@@ -69,3 +49,4 @@ pageUser.title.confirmDelete=Potvrdenie zmazanie
 pageUser.title.editing={0} details
 pageUser.title.selectAssignable=Select object(s)
 pageUser.title.selectResource=Vybraté koncové systém(y)
+pageUser.userDetails=User details
