--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -582,6 +582,7 @@
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
+                                <phase>package</phase>
                                 <goals>
                                     <goal>jar</goal>
                                 </goals>
