--- a/gui/admin-gui/pom.xml
+++ b/gui/admin-gui/pom.xml
@@ -214,6 +214,12 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>com.evolveum.midpoint.model</groupId>
+            <artifactId>notifications-impl</artifactId>
+            <version>2.3-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>com.evolveum.midpoint.provisioning</groupId>
             <artifactId>provisioning-impl</artifactId>
             <version>2.3-SNAPSHOT</version>
