More work on schemadoc maven plugin. We are almost there.

--- a/infra/schema/pom.xml
+++ b/infra/schema/pom.xml
@@ -347,6 +347,7 @@
                         <schemaFile>src/main/resources/xml/ns/public/common/common-2a.xsd</schemaFile>
                         <schemaFile>src/main/resources/xml/ns/public/common/api-types-2.xsd</schemaFile>
                     </schemaFiles>
+                    <templateDir>src/main/schemadoc/templates</templateDir>
                 </configuration>
                 <executions>
                   <execution>
