--- a/infra/prism-maven-plugin/pom.xml
+++ b/infra/prism-maven-plugin/pom.xml
@@ -43,6 +43,10 @@
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+        </dependency>
 
     </dependencies>
     <build>
