--- a/infra/prism-maven-plugin/pom.xml
+++ b/infra/prism-maven-plugin/pom.xml
@@ -35,6 +35,16 @@
             <version>2.0</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-project</artifactId>
+            <version>2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-archiver</artifactId>
+            <version>2.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.evolveum.midpoint.infra</groupId>
             <artifactId>prism</artifactId>
             <version>2.3-SNAPSHOT</version>
