--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit.properties
@@ -19,6 +19,7 @@ pageTaskEdit.button.back=Back
 pageTaskEdit.button.save=Save
 pageTaskEdit.button.edit=Edit
 
+pageTaskEdit.basic=Basic
 pageTaskEdit.name=Task name
 pageTaskEdit.description=Description
 pageTaskEdit.oid=OID
@@ -58,7 +59,8 @@ pageTaskEdit.boundHelp=Tightly bound tasks are used to run short actions, which 
   is not supported for these tasks; you have to specify the time interval. 
 pageTaskEdit.cronHelp=Cron-like specification is in the form: SECONDS MINUTES HOURS DAY-OF-MONTH MONTH DAY-OF-WEEK YEAR \
   (optional), e.g. '0 0 12 ? * WED' which means 'every Wednesday at 12:00:00 pm'. 
-pageTaskEdit.cronHelpLink=For more information, please see 
+pageTaskEdit.cronHelpLink=For more information, please see
+pageTaskEdit.cronHelpLinkTutorial=tutorial
 
 pageTaskEdit.message.cantTaskDetails=Couldn't load task details.
 pageTaskEdit.message.node= - at node {0}
