--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTaskAdd.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTaskAdd.properties
@@ -41,6 +41,9 @@ pageTask.category.LiveSynchronization=Live synchronization
 pageTask.category.Reconciliation=Reconciliation
 pageTask.category.UserRecomputation=User recomputation
 pageTask.category.Workflow=Workflow
+pageTask.cronHelpLink=For more information, please see
+pageTask.cronHelpLinkTutorial=tutorial
+pageTask.basic=Basic
 
 pageTask.scheduleHelp=For one-time tasks, enter neither schedule interval nor cron-like specification. \
   For recurring tasks, enter exactly one of these.
