workitems, styles, work in progress.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItem.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItem.properties
@@ -44,3 +44,4 @@ pageWorkItem.workItemCreatedOn=This work item created on:
 
 pageWorkItem.label.showTechnicalInformation=Show technical information
 
+pageWorkItem.options=Options
