--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -419,9 +419,9 @@ operation.com.evolveum.midpoint.web.component.assignment.AssignmentEditorPanel.l
 operation.com.evolveum.midpoint.web.component.assignment.AssignmentEditorPanel.loadResource=Load resource (Gui)
 operation.com.evolveum.midpoint.web.component.assignment.AssignmentEditorPanel.loadAttributes=Load attributes (Gui)
 operation.com.evolveum.midpoint.common.policy.PasswordPolicyUtils.passwordValidation=Password validation against password policy
-operation.com.evolveum.midpoint.model.lens.ChangeExecutor.linkAccount=Link account (Model)
-operation.com.evolveum.midpoint.model.lens.ChangeExecutor.unlinkAccount=Unlink account (Model)
-operation.com.evolveum.midpoint.model.lens.ChangeExecutor.updateSituationInAccount=Update situation in account (Model)
+operation.linkShadow=Link account (Model)
+operation.unlinkShadow=Unlink account (Model)
+operation.updateSituationInShadow=Update situation in account (Model)
 operation.com.evolveum.midpoint.model.lens.ChangeExecutor.execute=Execute (Model)
 operation.com.evolveum.midpoint.model.lens.ChangeExecutor.execute.focus.UserType=Execute user delta (Model)
 operation.com.evolveum.midpoint.model.lens.ChangeExecutor.execute.projection.ShadowType=Execute shadow delta (Model)
