--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_sk_SK.utf8.properties
@@ -155,9 +155,9 @@ operation.com.evolveum.midpoint.model.lens.ChangeExecutor.execute=Execute (Model
 operation.com.evolveum.midpoint.model.lens.ChangeExecutor.execute.focus.UserType=Execute user delta (Model)
 operation.com.evolveum.midpoint.model.lens.ChangeExecutor.execute.projection.ShadowType=Execute shadow delta (Model)
 operation.com.evolveum.midpoint.model.lens.ChangeExecutor.executeDelta=Execute delta (Model)
-operation.com.evolveum.midpoint.model.lens.ChangeExecutor.linkAccount=Link account (Model)
-operation.com.evolveum.midpoint.model.lens.ChangeExecutor.unlinkAccount=Unlink account (Model)
-operation.com.evolveum.midpoint.model.lens.ChangeExecutor.updateSituationInAccount=Update situation in account (Model)
+operation.linkShadow=Link account (Model)
+operation.unlinkShadow=Unlink account (Model)
+operation.updateSituationInShadow=Update situation in account (Model)
 operation.com.evolveum.midpoint.model.lens.projector.ContextLoader.checkProjectionContexts=Check projection contexts (Model)
 operation.com.evolveum.midpoint.model.lens.projector.InboundProcessor.processInbound=Process inbound (Model)
 operation.com.evolveum.midpoint.model.lens.projector.Projector.project=Project (Model)
