localization fix for report output

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -44,6 +44,7 @@ ObjectTypeGuiDescriptor.org=Organization
 ObjectTypeGuiDescriptor.shadow=Shadow
 ObjectTypeGuiDescriptor.focus=Focus
 ObjectTypeGuiDescriptor.report=Report
+ObjectTypeGuiDescriptor.reportOutput=Report output
 
 SynchronizationPolicyDecision.ADD=Add
 SynchronizationPolicyDecision.DELETE=Delete
