--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -339,14 +339,14 @@
             </dependency>
             <!--  Identity conectors  -->
             <dependency>
-                <groupId>org.forgerock.openicf.framework</groupId>
+                <groupId>org.connid</groupId>
                 <artifactId>connector-framework</artifactId>
-                <version>1.1.2.em82</version>
+                <version>1.4.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>org.forgerock.openicf.framework</groupId>
+                <groupId>org.connid</groupId>
                 <artifactId>connector-framework-internal</artifactId>
-                <version>1.1.2.em82</version>
+                <version>1.4.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.forgerock.openicf.connectors</groupId>
