Configuration for maven artifact deployment to evolveum nexus.

--- a/model/model-client/pom.xml
+++ b/model/model-client/pom.xml
@@ -26,6 +26,20 @@
         <groupId>com.evolveum.midpoint</groupId>
         <version>2.2.1-SNAPSHOT</version>
     </parent>
+
+    <distributionManagement>
+      <repository>
+        <id>evolveum-nexus</id>
+        <name>Internal Releases</name>
+        <url>http://nexus.evolveum.com/nexus/content/repositories/releases/</url>
+      </repository>
+      <snapshotRepository>
+        <id>evolveum-nexus</id>
+        <name>Internal Releases</name>
+        <url>http://nexus.evolveum.com/nexus/content/repositories/snapshots/</url>
+      </snapshotRepository>
+    </distributionManagement>
+
     <dependencies>
     	<dependency>
 			<groupId>commons-lang</groupId>
