--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,20 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
+
+    <distributionManagement>
+      <repository>
+	<id>evolveum-nexus</id>
+	<name>Internal Releases</name>
+	<url>http://nexus.evolveum.com/nexus/content/repositories/releases/</url>
+      </repository>
+      <snapshotRepository>
+	<id>evolveum-nexus</id>
+	<name>Internal Releases</name>
+	<url>http://nexus.evolveum.com/nexus/content/repositories/snapshots/</url>
+      </snapshotRepository>
+    </distributionManagement>
+
 	<issueManagement>
 		<system>Atlassian JIRA</system>
 		<url>https://jira.evolveum.com/browse/MID</url>
