--- a/samples/model-client-sample/pom.xml
+++ b/samples/model-client-sample/pom.xml
@@ -36,10 +36,25 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
+
+    <distributionManagement>
+      <repository>
+        <id>evolveum-nexus</id>
+        <name>Internal Releases</name>
+        <url>http://nexus.evolveum.com/nexus/content/repositories/releases/</url>
+      </repository>
+      <snapshotRepository>
+        <id>evolveum-nexus</id>
+        <name>Internal Releases</name>
+        <url>http://nexus.evolveum.com/nexus/content/repositories/snapshots/</url>
+      </snapshotRepository>
+    </distributionManagement>
+
 	<issueManagement>
 		<system>Atlassian JIRA</system>
 		<url>http://jira.evolveum.com/</url>
 	</issueManagement>
+
 	<build>
 	<plugins>
 		<plugin>
