updated i18n property files

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_en_US.utf8.properties
@@ -1,4 +1,4 @@
-#Mon Dec 09 19:46:43 CET 2013
+#Wed Jan 01 11:41:42 CET 2014
 ActivationStatusType.ARCHIVED=Archived
 ActivationStatusType.DISABLED=Disabled
 ActivationStatusType.ENABLED=Enabled
@@ -64,6 +64,7 @@ ObjectTypeGuiDescriptor.object=Object
 ObjectTypeGuiDescriptor.objectTemplate=Object template
 ObjectTypeGuiDescriptor.org=Organization
 ObjectTypeGuiDescriptor.report=Report
+ObjectTypeGuiDescriptor.reportOutput=Report output
 ObjectTypeGuiDescriptor.resource=Resource
 ObjectTypeGuiDescriptor.role=Role
 ObjectTypeGuiDescriptor.shadow=Shadow
