--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit_sk_SK.utf8.properties
@@ -1,5 +1,6 @@
-#Tue Jul 16 11:28:20 CEST 2013
+#Wed Jan 01 11:41:35 CET 2014
 page.title=Task details
+pageTaskEdit.basic=Basic
 pageTaskEdit.bound=Tightly bound (use if recurring task runs often) 
 pageTaskEdit.boundHelp=Tightly bound tasks are used to run short actions, which are repeating quite often (e.g. in intervals less than 1 minute). A typical example is the live synchronization. Cron-like specification is not supported for these tasks; you have to specify the time interval. 
 pageTaskEdit.button.back=Back
@@ -8,6 +9,7 @@ pageTaskEdit.button.save=Save
 pageTaskEdit.category=Category
 pageTaskEdit.cronHelp=Cron-like specification is in the form\: SECONDS MINUTES HOURS DAY-OF-MONTH MONTH DAY-OF-WEEK YEAR (optional), e.g. '0 0 12 ? * WED' which means 'every Wednesday at 12\:00\:00 pm'. For more information, please see www.quartz-scheduler.org/documentation/quartz-2.1.x/tutorials/tutorial-lesson-06.
 pageTaskEdit.cronHelpLink=For more information, please see 
+pageTaskEdit.cronHelpLinkTutorial=tutorial
 pageTaskEdit.cronSpec=Schedule cron-like specification
 pageTaskEdit.description=Description
 pageTaskEdit.execution=Execution status
