--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageTimeTest_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageTimeTest_sk_SK.utf8.properties
@@ -1,4 +1,4 @@
-#Tue Jul 16 11:28:20 CEST 2013
+#Wed Jan 01 11:41:35 CET 2014
 PageTimeTest.offset=Offset
 page.title=Time test
 pageTimeTest.button.save=Change time
