--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/server/PageTaskAdd_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/server/PageTaskAdd_sk_SK.utf8.properties
@@ -1,11 +1,10 @@
-#Thu May 30 10:05:25 CEST 2013
+#Wed Jan 01 11:41:35 CET 2014
 page.title=New task
 pageTask.advancedOption=Advanced option
+pageTask.basic=Basic
 pageTask.bound=Tightly bound (use if recurring task runs often)
 pageTask.boundHelp=Tightly bound tasks are used to run short actions, which are repeating quite often (e.g. in intervals less than 1 minute). A typical example is the live synchronization. Cron-like specification is not supported for these tasks; you have to specify the time interval. 
 pageTask.browse=Browse
-pageTask.button.back=Back
-pageTask.button.save=Save
 pageTask.category.Demo=Demo
 pageTask.category.ImportFromFile=Import from file
 pageTask.category.ImportingAccounts=Importing accounts
@@ -16,6 +15,7 @@ pageTask.category.Workflow=Workflow
 pageTask.createSuspended=Create in SUSPENDED state
 pageTask.cronHelp=Cron-like specification is in the form\: SECONDS MINUTES HOURS DAY-OF-MONTH MONTH DAY-OF-WEEK YEAR (optional), e.g. '0 0 12 ? * WED' which means 'every Wednesday at 12\:00\:00 pm'. 
 pageTask.cronHelpLink=For more information, please see 
+pageTask.cronHelpLinkTutorial=tutorial
 pageTask.cronSpec=Schedule cron-like specification
 pageTask.misfire=Misfire action
 pageTask.name=Task name
