--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItem_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItem_sk_SK.utf8.properties
@@ -1,4 +1,4 @@
-#Thu May 30 10:05:25 CEST 2013
+#Wed Jan 01 11:41:35 CET 2014
 page.title=Detaily pracovnej položky
 pageWorkItem.accordionLabel.additionalData=Related data (detailed)
 pageWorkItem.accordionLabel.objectNew=Object after proposed change (detailed)
@@ -16,6 +16,7 @@ pageWorkItem.label.showTechnicalInformation=Show technical information
 pageWorkItem.mainInfo=Basic information
 pageWorkItem.objectNew.description=Object after proposed change
 pageWorkItem.objectOld.description=Object before change
+pageWorkItem.options=Options
 pageWorkItem.requestCommon.description=General information about the request
 pageWorkItem.requestSpecific.description=Your decision
 pageWorkItem.requestedBy=Requested by\:
