updated debug list page.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageDebugList.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageDebugList.properties
@@ -18,8 +18,7 @@ page.subTitle=from repository
 pageDebugList.options=Options
 pageDebugList.searchTextPlaceholder=Name
 pageDebugList.objectType=Object type
-pageDebugList.button.deleteSelected=Delete selected
-pageDebugList.button.laxativeButton=Drop all identities
+pageDebugList.menu.deleteAllIdentities=Delete all identities
 pageDebugList.name=Name
 pageDebugList.description=Description
 pageDebugList.resourceName=Resource name
@@ -32,17 +31,12 @@ pageDebugList.menu.deleteSelected=Delete selected
 pageDebugList.menu.deleteAllType=Delete all of selected type
 pageDebugList.button.clear=Clear
 pageDebugList.button.search=Search
-pageDebugList.button.export=Export
-pageDebugList.button.exportAll=Export all
-pageDebugList.button.label.export=Export:
 pageDebugList.message.queryException=Couldn't create query for name substring, reason: {0}
-
 pageDebugList.dialog.title.confirmDelete=Confirm delete
-pageDebugList.dialog.title.confirmLaxative=Confirm dropping all identities
-pageDebugList.dialog.title.confirmLaxativeMessage=Following changes will take effect:
 pageDebugList.message.nothingSelected=No object has been selected.
+pageDebugList.message.deleteAllType=Do you really want to delete all objects of type "{0}"?
 pageDebugList.message.deleteObjectConfirm=Do you really want to delete "{0}"?
-pageDebugList.message.deleteSelectedConfirm=Do you really want to delete {0} object/s?
+pageDebugList.message.deleteSelectedConfirm=Do you really want to delete {0} objects?
 pageDebugList.message.createFileException=Couldn't create file for download.
 pageDebugList.message.countSearchProblem=Couldn't perform search operation on users/shadows
 pageDebugList.message.singleDeleteProblemUser=Couldn't delete user
