--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel.properties
@@ -54,10 +54,10 @@ LoggingConfigPanel.logger.GUI=Web logger
 LoggingConfigPanel.logger.TASKMANAGER=Task manager logger
 LoggingConfigPanel.logger.RESOURCEOBJECTCHANGELISTENER=Resource object change listener logger
 
-LoggingConfigPanel.profiling.general=Profiling - General
+LoggingConfigPanel.profiling.general=Profiling
 LoggingConfigPanel.profiling.requestFilter=Request Filter:
 LoggingConfigPanel.profiling.performanceStatistics=Performance Statistics:
-LoggingConfigPanel.profiling.subsystems=Profiling - Subsystems
+LoggingConfigPanel.profiling.subsystems=Profiling subsystems
 LoggingConfigPanel.profiling.subsystem.model=Model
 LoggingConfigPanel.profiling.subsystem.repository=Repository
 LoggingConfigPanel.profiling.subsystem.provisioning=Provisioning
@@ -67,7 +67,7 @@ LoggingConfigPanel.profiling.subsystem.taskManager=Task Manager
 LoggingConfigPanel.profiling.subsystem.workflow=Workflow
 LoggingConfigPanel.profiling.dumpInterval=Dump interval:
 LoggingConfigPanel.profiling.dumpInterval.placeholder=Dump interval
-LoggingConfigPanel.profiling.entryExit=Profiling - entry/exit
+LoggingConfigPanel.profiling.entryExit=Profiling entry/exit
 
 
 logger.emptyLogger=Logger must not be empty
