--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -352,16 +352,34 @@
                 <groupId>org.forgerock.openicf.connectors</groupId>
                 <artifactId>databasetable-connector</artifactId>
                 <version>1.1.0.em12</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.forgerock.openicf.framework</groupId>
+                        <artifactId>connector-framework</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.forgerock.openicf.connectors</groupId>
                 <artifactId>csvfile-connector</artifactId>
                 <version>1.1.1.0.em80</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.forgerock.openicf.framework</groupId>
+                        <artifactId>connector-framework</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.forgerock.openicf.connectors</groupId>
                 <artifactId>ldap-connector</artifactId>
                 <version>1.1.0.em2</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.forgerock.openicf.framework</groupId>
+                        <artifactId>connector-framework</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <!-- End connectors -->
             <dependency>
