more style improvements, not finished yet.

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/content/PageAccount_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/content/PageAccount_en_US.utf8.properties
@@ -4,4 +4,4 @@ pageAccount.button.back=Back
 pageAccount.button.save=Save
 pageAccount.description=Account on resource
 pageAccount.message.cantEditAccount=Couldn't load account for editing.
-pageAccount.subtitle={0}
+page.subTitle=on {0}
