--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts_en_US.utf8.properties
@@ -1,5 +1,6 @@
 #Sat Oct 12 17:23:53 CEST 2013
-page.title={0}
+page.title=Accounts
+page.subTitle=on {0}
 pageContentAccounts.accounts=Accounts
 pageContentAccounts.button.changeOwner=Change owner
 pageContentAccounts.button.clearButton=Clear
@@ -13,7 +14,6 @@ pageContentAccounts.message.cantShowUserDetails=Can't show details of user {0} (
 pageContentAccounts.message.noAccountSelected=No accounts has been selected.
 pageContentAccounts.message.resourceOidNotDefined=Resource oid is not defined in url.
 pageContentAccounts.name=Name
-pageContentAccounts.optionsTitle=Options
 pageContentAccounts.owner=Owner
 pageContentAccounts.search=Search
 pageContentAccounts.situation=Situation
