--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/content/PageAccount.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/content/PageAccount.properties
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 page.title=Account details
-pageAccount.subtitle={0}
+page.subTitle=on {0}
 pageAccount.message.cantEditAccount=Couldn't load account for editing.
 pageAccount.description=Account on resource
 pageAccount.button.save=Save
