--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts.properties
@@ -15,8 +15,6 @@
 #
 page.title=Accounts
 page.subTitle=on {0}
-pageContentAccounts.accounts=Accounts
-pageContentAccounts.optionsTitle=Options
 pageContentAccounts.search=Search
 pageContentAccounts.name=Name
 pageContentAccounts.situation=Situation
@@ -28,7 +26,7 @@ pageContentAccounts.message.cantImportAccount=Can't import account, oid={0}
 pageContentAccounts.message.cantShowUserDetails=Can't show details of user {0} ({1}).
 pageContentAccounts.message.cantShowAccountDetails=Can't show details for account {0} ({1}).
 pageContentAccounts.message.noAccountSelected=No accounts has been selected.
-pageContentAccounts.button.changeOwner=Change owner
-pageContentAccounts.button.importAccount=Import Account
-pageContentAccounts.button.removeOwner=Remove owner
+pageContentAccounts.menu.changeOwner=Change owner
+pageContentAccounts.menu.importAccount=Import Account
+pageContentAccounts.menu.removeOwner=Remove owner
 pageContentAccounts.message.resourceOidNotDefined=Resource oid is not defined in url.
