--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts_en_US.utf8.properties
@@ -1,13 +1,11 @@
-#Sat Oct 12 17:23:53 CEST 2013
-page.title=Accounts
+#Sat Jan 04 14:25:58 CET 2014
 page.subTitle=on {0}
-pageContentAccounts.accounts=Accounts
-pageContentAccounts.button.changeOwner=Change owner
-pageContentAccounts.button.clearButton=Clear
-pageContentAccounts.button.importAccount=Import Account
-pageContentAccounts.button.removeOwner=Remove owner
+page.title=Accounts
 pageContentAccounts.button.searchButton=Search
 pageContentAccounts.identifiers=Identifiers
+pageContentAccounts.menu.changeOwner=Change owner
+pageContentAccounts.menu.importAccount=Import Account
+pageContentAccounts.menu.removeOwner=Remove owner
 pageContentAccounts.message.cantImportAccount=Can't import account, oid\={0}
 pageContentAccounts.message.cantShowAccountDetails=Can't show details for account {0} ({1}).
 pageContentAccounts.message.cantShowUserDetails=Can't show details of user {0} ({1}).
