--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/content/PageAccount_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/content/PageAccount_sk_SK.utf8.properties
@@ -1,23 +1,7 @@
-#
-# Copyright (c) 2010-2013 Evolveum
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-
-#Thu Oct 04 12:42:36 CEST 2012
+#Sat Jan 04 14:25:43 CET 2014
+page.subTitle=on {0}
 page.title=Account details
 pageAccount.button.back=Back
 pageAccount.button.save=Save
 pageAccount.description=Account on resource
 pageAccount.message.cantEditAccount=Couldn't load account for editing.
-pageAccount.subtitle={0}
